# artefact_technical_challenge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml
data/: desafio_tecnico_ai_eng - categories.csv  desafio_tecnico_ai_eng - customers.csv  desafio_tecnico_ai_eng - order_items.csv  desafio_tecnico_ai_eng - orders.csv  desafio_tecnico_ai_eng - products.csv  desafio_tecnico_ai_eng - promotions.csv
docs/: architecture.md  decisions.md  deliverables.md  execution-plan.md
examples/: 01_catalog_search.md  02_store_information_and_scope.md  03_product_price.md  04_return_policy_order.md  05_order_tracking.md
src/emporio/: __init__.py  agent.py  api.py  cli.py  config.py  db.py  etl.py  ingest_policies.py  models.py  normalization.py  persona.py  retrieval.py  setup.py  tools.py
tests/: conftest.py  test_agent.py  test_api.py  test_app.py  test_behavior_live.py  test_config.py  test_etl.py  test_retrieval.py  test_tools.py
