[project]
name = "emporio-agent"
version = "0.1.0"
description = "Grounded customer-support agent for the Emporio da Musica technical challenge"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.0,<2",
    "fastapi>=0.115,<1",
    "openai>=1.0,<3",
    "pydantic>=2.10,<3",
    "pydantic-ai-slim[openai]>=1.0,<2",
    "pydantic-settings>=2.7,<3",
    "pypdf>=5,<7",
    "rich>=13.9,<15",
    "streamlit>=1.40,<2",
    "uvicorn>=0.32,<1",
]

[project.scripts]
emporio-setup = "emporio.setup:main"
emporio-chat = "emporio.cli:main"
emporio-api = "emporio.api:main"

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emporio"]

[tool.pytest.ini_options]
addopts = "-q -m 'not live'"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live: golden behavior scenarios against the real model (needs OPENAI_API_KEY, costs cents)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
